raidutils (0.0.6-1) unstable; urgency=low

  * new upstream (closes: #327805)

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 12 Sep 2005 18:36:46 +0100

raidutils (0.0.4-7) unstable; urgency=low

  * comment out redundant and potentially incorrect declaration of the
    exit() routine (closes: #326580)

 -- Barak A. Pearlmutter <bap@debian.org>  Sun,  4 Sep 2005 15:23:06 +0100

raidutils (0.0.4-6) unstable; urgency=low

  * patch from Andreas Jochens <aj@andaco.de> for 64-bit issue,
    inappropriate cast of (char *) to int (closes: #302597)

 -- Barak A. Pearlmutter <bap@debian.org>  Thu,  1 Sep 2005 12:10:58 +0200

raidutils (0.0.4-5) unstable; urgency=low

  * copy linux 2.6.8 i2o-dev.h to include/linux/i2o-dev.h (closes: #278239)
  * add autoconf build dependency (closes: #270286)

 -- Barak A. Pearlmutter <bap@debian.org>  Sun, 16 Jan 2005 01:27:09 +0000

raidutils (0.0.4-4) unstable; urgency=low

  * patch for elderly GCC thanks to Anders Henke (closes: #266644)

 -- Barak A. Pearlmutter <bap@debian.org>  Wed, 18 Aug 2004 11:52:20 -0600

raidutils (0.0.4-3) unstable; urgency=low

  * Alternative ITP, provide alternative name (closes: #159906)
  * Mention dpt_i2o in description (closes: #260544)
  * Typo in raideng help text (closes: #260545)

 -- Barak A. Pearlmutter <bap@debian.org>  Wed, 21 Jul 2004 03:41:06 -0600

raidutils (0.0.4-2) unstable; urgency=low

  * Clarify description

 -- Barak A. Pearlmutter <bap@debian.org>  Sun,  4 Jul 2004 10:28:07 +0100

raidutils (0.0.4-1) unstable; urgency=low

  * Initial Release.  (closes: #249637)

 -- Barak Pearlmutter <bap@debian.org>  Tue, 18 May 2004 11:33:42 -0600